<?xml version="1.0"?>
<package format="3">
  <name>mobile_odom</name>
  <version>0.0.0</version>
  <description>The mobile_odom package</description>
  <maintainer email="tazel7885@todo.todo">tazel7885</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- If you're going to use Python nodes, add rclpy as a dependency -->
  <!-- <depend>rclpy</depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
